--- a/staff.html
+++ b/staff.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Our Staff — Hiltop Primary School</title>
   <meta name="description" content="Meet the teachers and support staff at Hiltop Primary School." />
-  <link rel="stylesheet" href="assets/styles.css" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to main content</a>
@@ -13,7 +13,7 @@
   <header class="site-header">
     <div class="container header-inner">
       <a class="brand" href="index.html">
-        <img src="images/logo.svg" alt="Hiltop logo" class="logo" />
+        <img src="logo.svg" alt="Hiltop logo" class="logo" />
         <div class="brand-text">
           <strong>Hiltop Primary School</strong>
           <span class="tagline">Learning • Kindness • Growth</span>
@@ -39,21 +39,21 @@
     <section id="staffGrid" class="grid grid-3 staff-grid">
       <!-- Fallback staff cards (for no-JS) -->
       <article class="card staff-card">
-        <img src="images/headteacher.jpg" alt="Mrs Jane Smith — Headteacher" />
+        <img src="headteacher.jpg" alt="Mrs Jane Smith — Headteacher" />
         <h3>Mrs Jane Smith</h3>
         <p class="role">Headteacher</p>
         <p class="bio small">Headteacher since 2014. Passionate about curriculum development and inclusive education.</p>
       </article>
 
       <article class="card staff-card">
-        <img src="images/staff-1.jpg" alt="Mr Tom Harris — Year 4 teacher" />
+        <img src="staff-1.jpg" alt="Mr Tom Harris — Year 4 teacher" />
         <h3>Mr Tom Harris</h3>
         <p class="role">Year 4 Teacher</p>
         <p class="bio small">Leads maths across KS2 and runs the chess club.</p>
       </article>
 
       <article class="card staff-card">
-        <img src="images/staff-2.jpg" alt="Ms Rachel Green — SENDCo" />
+        <img src="staff-2.jpg" alt="Ms Rachel Green — SENDCo" />
         <h3>Ms Rachel Green</h3>
         <p class="role">SENCo</p>
         <p class="bio small">Specialist in supporting children with additional needs.</p>
@@ -81,6 +81,7 @@
     <div class="site-copy"><small>© <span id="currentYear3"></span> Hiltop Primary School</small></div>
   </footer>
 
-  <script src="assets/scripts.js" defer></script>
+  <script src="scripts.js" defer></script>
 </body>
 </html>
+
