--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>About — Hiltop Primary School</title>
   <meta name="description" content="About Hiltop Primary School — Our vision, values and curriculum." />
-  <link rel="stylesheet" href="assets/styles.css" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to main content</a>
@@ -13,7 +13,7 @@
   <header class="site-header">
     <div class="container header-inner">
       <a class="brand" href="index.html">
-        <img src="images/logo.svg" alt="Hiltop logo" class="logo" />
+        <img src="logo.svg" alt="Hiltop logo" class="logo" />
         <div class="brand-text">
           <strong>Hiltop Primary School</strong>
           <span class="tagline">Learning • Kindness • Growth</span>
@@ -87,6 +87,7 @@
     </div>
   </footer>
 
-  <script src="assets/scripts.js" defer></script>
+  <script src="scripts.js" defer></script>
 </body>
 </html>
+
