--- a/admissions.html
+++ b/admissions.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Admissions — Hiltop Primary School</title>
   <meta name="description" content="Admissions information for Hiltop Primary School: Reception and in-year admissions, open mornings and contact details." />
-  <link rel="stylesheet" href="assets/styles.css" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to main content</a>
@@ -49,6 +49,7 @@
     <div class="site-copy"><small>© <span id="currentYear6"></span> Hiltop Primary School</small></div>
   </footer>
 
-  <script src="assets/scripts.js" defer></script>
+  <script src="scripts.js" defer></script>
 </body>
 </html>
+
