--- a/careers.html
+++ b/careers.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Careers — Hiltop Primary School</title>
   <meta name="description" content="Work at Hiltop Primary School — vacancies, how to apply and staff benefits." />
-  <link rel="stylesheet" href="assets/styles.css" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to main content</a>
@@ -81,6 +81,7 @@
     <div class="site-copy"><small>© <span id="currentYear5"></span> Hiltop Primary School</small></div>
   </footer>
 
-  <script src="assets/scripts.js" defer></script>
+  <script src="scripts.js" defer></script>
 </body>
 </html>
+
