--- a/contact.html
+++ b/contact.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Contact — Hiltop Primary School</title>
   <meta name="description" content="Contact Hiltop Primary School: office hours, phone, email and a contact form." />
-  <link rel="stylesheet" href="assets/styles.css" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to main content</a>
 
   <header class="site-header">
     <div class="container header-inner">
-      <a class="brand" href="index.html"><img src="images/logo.svg" alt="" class="logo" /><div class="brand-text"><strong>Hiltop Primary</strong></div></a>
+      <a class="brand" href="index.html"><img src="logo.svg" alt="" class="logo" /><div class="brand-text"><strong>Hiltop Primary</strong></div></a>
       <nav class="primary-nav"><ul class="nav-list"><li><a href="index.html">Home</a></li><li><a class="active" href="contact.html">Contact</a></li></ul></nav>
     </div>
   </header>
@@ -50,6 +50,7 @@
     <div class="site-copy"><small>© <span id="currentYear10"></span> Hiltop Primary School</small></div>
   </footer>
 
-  <script src="assets/scripts.js" defer></script>
+  <script src="scripts.js" defer></script>
 </body>
 </html>
+
