--- a/careers.html
+++ b/careers.html
@@ -12,7 +12,7 @@
 
   <header class="site-header">
     <div class="container header-inner">
-      <a class="brand" href="index.html"><img src="images/logo.svg" alt="" class="logo" /><div class="brand-text"><strong>Hiltop Primary</strong></div></a>
+      <a class="brand" href="index.html"><img src="logo.svg" alt="" class="logo" /><div class="brand-text"><strong>Hiltop Primary</strong></div></a>
       <nav class="primary-nav">
         <ul class="nav-list"><li><a href="index.html">Home</a></li><li><a class="active" href="careers.html">Careers</a></li></ul>
       </nav>
@@ -84,4 +84,5 @@
   <script src="scripts.js" defer></script>
 </body>
 </html>
+
 
