--- a/gallery.html
+++ b/gallery.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Gallery — Hiltop Primary School</title>
   <meta name="description" content="Photo gallery from Hiltop Primary School events and classroom life." />
-  <link rel="stylesheet" href="assets/styles.css" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to main content</a>
 
   <header class="site-header">
     <div class="container header-inner">
-      <a class="brand" href="index.html"><img src="images/logo.svg" alt="" class="logo" /><div class="brand-text"><strong>Hiltop Primary</strong></div></a>
+      <a class="brand" href="index.html"><img src="logo.svg" alt="" class="logo" /><div class="brand-text"><strong>Hiltop Primary</strong></div></a>
       <nav class="primary-nav"><ul class="nav-list"><li><a href="index.html">Home</a></li><li><a class="active" href="gallery.html">Gallery</a></li></ul></nav>
     </div>
   </header>
@@ -24,15 +24,15 @@
     <section id="galleryGrid" class="masonry">
       <!-- Fallback images -->
       <figure class="card">
-        <img src="images/gallery-1.jpg" alt="Children painting in class">
+        <img src="gallery-1.jpg" alt="Children painting in class">
         <figcaption>Art day — Reception class</figcaption>
       </figure>
       <figure class="card">
-        <img src="images/gallery-2.jpg" alt="Sports day races">
+        <img src="gallery-2.jpg" alt="Sports day races">
         <figcaption>Sports Day — running races</figcaption>
       </figure>
       <figure class="card">
-        <img src="images/gallery-3.jpg" alt="School trip to the museum">
+        <img src="gallery-3.jpg" alt="School trip to the museum">
         <figcaption>Year 3 Trip — local museum</figcaption>
       </figure>
     </section>
@@ -50,6 +50,7 @@
     <div class="site-copy"><small>© <span id="currentYear8"></span> Hiltop Primary School</small></div>
   </footer>
 
-  <script src="assets/scripts.js" defer></script>
+  <script src="scripts.js" defer></script>
 </body>
 </html>
+
