--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Hiltop Primary School</title>
   <meta name="description" content="Hiltop Primary — Inspiring young minds through kindness, curiosity and creativity." />
-  <link rel="stylesheet" href="assets/styles.css" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to main content</a>
@@ -13,7 +13,7 @@
   <header class="site-header" role="banner">
     <div class="container header-inner">
       <a class="brand" href="index.html" aria-label="Hiltop Primary School home">
-        <img src="images/logo.svg" alt="Hiltop Primary logo" class="logo" />
+        <img src="logo.svg" alt="Hiltop Primary logo" class="logo" />
         <div class="brand-text">
           <strong>Hiltop Primary School</strong>
           <span class="tagline">Learning • Kindness • Growth</span>
@@ -54,7 +54,7 @@
           </div>
         </div>
         <div class="hero-media" aria-hidden="true">
-          <img src="images/hero.jpg" alt="Children playing outside at Hiltop Primary" />
+          <img src="hero.jpg" alt="Children playing outside at Hiltop Primary" />
         </div>
       </div>
     </section>
@@ -104,17 +104,17 @@
         <!-- JavaScript will render staff cards here; fallback HTML below ensures content if JS disabled -->
         <noscript>
           <div class="card staff-card">
-            <img src="images/headteacher.jpg" alt="Mrs Jane Smith — Headteacher">
+            <img src="headteacher.jpg" alt="Mrs Jane Smith — Headteacher">
             <h3>Mrs Jane Smith</h3>
             <p class="role">Headteacher</p>
           </div>
           <div class="card staff-card">
-            <img src="images/staff-1.jpg" alt="Mr Tom Harris — Year 4 teacher">
+            <img src="staff-1.jpg" alt="Mr Tom Harris — Year 4 teacher">
             <h3>Mr Tom Harris</h3>
             <p class="role">Year 4 Teacher</p>
           </div>
           <div class="card staff-card">
-            <img src="images/staff-2.jpg" alt="Ms Rachel Green — SENDCo">
+            <img src="staff-2.jpg" alt="Ms Rachel Green — SENDCo">
             <h3>Ms Rachel Green</h3>
             <p class="role">SENDCo</p>
           </div>
@@ -161,6 +161,7 @@
     </div>
   </footer>
 
-  <script src="assets/scripts.js" defer></script>
+  <script src="scripts.js" defer></script>
 </body>
 </html>
+
