--- a/leadership.html
+++ b/leadership.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Leadership — Hiltop Primary School</title>
   <meta name="description" content="Leadership team at Hiltop Primary School." />
-  <link rel="stylesheet" href="assets/styles.css" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to main content</a>
@@ -13,7 +13,7 @@
   <header class="site-header">
     <div class="container header-inner">
       <a class="brand" href="index.html">
-        <img src="images/logo.svg" alt="Hiltop Primary logo" class="logo" />
+        <img src="logo.svg" alt="Hiltop Primary logo" class="logo" />
         <div class="brand-text">
           <strong>Hiltop Primary School</strong>
         </div>
@@ -34,7 +34,7 @@
     <section id="leadershipGrid" class="grid grid-2">
       <!-- Fallback content -->
       <article class="card bio-card">
-        <img src="images/headteacher.jpg" alt="Mrs Jane Smith — Headteacher" />
+        <img src="headteacher.jpg" alt="Mrs Jane Smith — Headteacher" />
         <div>
           <h3>Mrs Jane Smith</h3>
           <p class="role">Headteacher</p>
@@ -43,7 +43,7 @@
       </article>
 
       <article class="card bio-card">
-        <img src="images/deputy.jpg" alt="Mr Tom Williams — Deputy Head" />
+        <img src="deputy.jpg" alt="Mr Tom Williams — Deputy Head" />
         <div>
           <h3>Mr Tom Williams</h3>
           <p class="role">Deputy Head</p>
@@ -64,6 +64,7 @@
     <div class="site-copy"><small>© <span id="currentYear4"></span> Hiltop Primary School</small></div>
   </footer>
 
-  <script src="assets/scripts.js" defer></script>
+  <script src="scripts.js" defer></script>
 </body>
 </html>
+
