--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header class="site-header" role="banner">
     <div class="container header-inner">
       <a class="brand" href="index.html" aria-label="Hiltop Primary School home">
-        <img src="logo.svg" alt="Hiltop Primary logo" class="logo" />
+        <img src="logo.png" alt="Hiltop Primary logo" class="logo" />
         <div class="brand-text">
           <strong>Hiltop Primary School</strong>
           <span class="tagline">Learning • Kindness • Growth</span>
@@ -47,7 +47,7 @@
       <div class="hero-inner container">
         <div class="hero-text">
           <h1>Welcome to Hiltop Primary School</h1>
-          <p class="lead">A caring, creative and inclusive school — where every child is supported to flourish.</p>
+          <p class="lead">Be Kind, Work Hard</p>
           <div class="hero-actions">
             <a class="btn btn-primary" href="admissions.html">Admissions</a>
             <a class="btn btn-ghost" href="about.html">About our school</a>
@@ -164,4 +164,5 @@
   <script src="scripts.js" defer></script>
 </body>
 </html>
+
 
