--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           </div>
         </div>
         <div class="hero-media" aria-hidden="true">
-          <img src="hero.jpg" alt="Children playing outside at Hiltop Primary" />
+          <img src="iamge.png" alt="Our School" />
         </div>
       </div>
     </section>
@@ -164,5 +164,6 @@
   <script src="scripts.js" defer></script>
 </body>
 </html>
+
 
 
