--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header class="site-header" role="banner">
     <div class="container header-inner">
       <a class="brand" href="index.html" aria-label="Hiltop Primary School home">
-        <img src="logo.png" alt="Hiltop Primary logo" class="logo" />
+        <img src="logo.svg" alt="Hiltop Primary logo" class="logo" />
         <div class="brand-text">
           <strong>Hiltop Primary School</strong>
           <span class="tagline">Learning • Kindness • Growth</span>
@@ -164,6 +164,7 @@
   <script src="scripts.js" defer></script>
 </body>
 </html>
+
 
 
 
