--- a/about.html
+++ b/about.html
@@ -1,93 +1,68 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>About — Hiltop Primary School</title>
-  <meta name="description" content="About Hiltop Primary School — Our vision, values and curriculum." />
-  <link rel="stylesheet" href="styles.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About Hiltop Primary School</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <a class="skip-link" href="#main">Skip to main content</a>
-
-  <header class="site-header">
-    <div class="container header-inner">
-      <a class="brand" href="index.html">
-        <img src="logo.svg" alt="Hiltop logo" class="logo" />
-        <div class="brand-text">
-          <strong>Hiltop Primary School</strong>
-          <span class="tagline">Learning • Kindness • Growth</span>
-        </div>
-      </a>
-      <nav class="primary-nav">
-        <ul class="nav-list">
-          <li><a href="index.html">Home</a></li>
-          <li><a class="active" href="about.html">About</a></li>
-        </ul>
-      </nav>
+  <nav class="navbar">
+    <div class="logo"><a href="index.html">Hiltop Primary School</a></div>
+    <div class="nav-links">
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="staff.html">Our Staff</a>
+      <a href="leadership.html">Leadership</a>
+      <a href="careers.html">Careers</a>
+      <a href="admissions.html">Admissions</a>
+      <a href="events.html">Events</a>
+      <a href="gallery.html">Gallery</a>
+      <a href="contact.html">Contact</a>
     </div>
-  </header>
+  </nav>
 
-  <main id="main" class="container">
-    <h1>About Hiltop Primary School</h1>
+  <section class="hero">
+    <div class="hero-content">
+      <h1>About Hiltop Primary School</h1>
+      <p>Committed to excellence in education since 1990.</p>
+    </div>
+  </section>
 
-    <p class="lead">We provide a broad, balanced and ambitious curriculum which develops knowledge and skills with curiosity and joy.</p>
-
-    <section class="grid grid-2 mt-2">
-      <article class="card">
-        <h2>Our Vision</h2>
-        <p>To create a learning environment where every child can thrive academically and personally — confident, curious and kind.</p>
-      </article>
-
-      <article class="card">
-        <h2>Our Values</h2>
-        <ul>
-          <li><strong>Kindness</strong> — we treat each other with respect and care.</li>
-          <li><strong>Resilience</strong> — we encourage children to try hard and persevere.</li>
-          <li><strong>Curiosity</strong> — we nurture questions and exploration.</li>
-        </ul>
-      </article>
-    </section>
-
-    <section class="mt-2 card">
-      <h2>Curriculum & Approach</h2>
-      <p>Our curriculum is knowledge-rich, sequenced and inclusive. Assessment is used to support learning, not label children. We emphasise reading and a stepped progression of knowledge in each subject area.</p>
-      <p>You can download our <a href="policies.html">curriculum policy</a> and other key documents on the policies page.</p>
-    </section>
-
-    <section class="mt-2 card">
-      <h2>Community & Partnerships</h2>
-      <p>We work closely with families, local community organisations and feeder secondary schools to ensure smooth transitions and rich learning experiences.</p>
-    </section>
-  </main>
-
-  <footer class="site-footer">
-    <div class="container footer-inner">
-      <div class="footer-col">
-        <strong>Hiltop Primary School</strong>
-        <address>
-          12 Hillcrest Road<br />
-          Townsville, HT1 2AB
-        </address>
+  <section>
+    <h2 class="section-title">Our Vision & Mission</h2>
+    <div class="grid grid-3">
+      <div class="card">
+        <h3>Our Vision</h3>
+        <p>To inspire lifelong learning, creativity, and ethical values in every child.</p>
       </div>
-      <div class="footer-col">
-        <h4>Pages</h4>
-        <ul class="footer-links">
-          <li><a href="staff.html">Staff</a></li>
-          <li><a href="leadership.html">Leadership</a></li>
-        </ul>
+      <div class="card">
+        <h3>Our Mission</h3>
+        <p>Provide a nurturing environment that balances academics, arts, sports, and community service.</p>
       </div>
-      <div class="footer-col">
-        <h4>Contact</h4>
-        <p><a href="mailto:info@hiltop.school">info@hiltop.school</a></p>
+      <div class="card">
+        <h3>Our Values</h3>
+        <p>Integrity, respect, curiosity, and inclusivity guide all we do.</p>
       </div>
     </div>
-    <div class="site-copy">
-      <small>© <span id="currentYear2"></span> Hiltop Primary School</small>
-    </div>
+  </section>
+
+  <section>
+    <h2 class="section-title">School History</h2>
+    <p style="max-width: 900px; margin: 0 auto; text-align:center;">
+      Established in 1990, Hiltop Primary School has grown into a thriving institution with a strong reputation for quality education, nurturing teachers, and innovative learning programs. Over the years, thousands of students have flourished in our care.
+    </p>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 Hiltop Primary School | <a href="contact.html">Contact Us</a></p>
+    <p>
+      <a href="#">Facebook</a> |
+      <a href="#">Twitter</a> |
+      <a href="#">Instagram</a>
+    </p>
   </footer>
 
-  <script src="scripts.js" defer></script>
+  <script src="scripts.js"></script>
 </body>
 </html>
-
