--- a/leadership.html
+++ b/leadership.html
@@ -1,70 +1,64 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Leadership — Hiltop Primary School</title>
-  <meta name="description" content="Leadership team at Hiltop Primary School." />
-  <link rel="stylesheet" href="styles.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Leadership Team - Hiltop Primary School</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <a class="skip-link" href="#main">Skip to main content</a>
-
-  <header class="site-header">
-    <div class="container header-inner">
-      <a class="brand" href="index.html">
-        <img src="logo.svg" alt="Hiltop Primary logo" class="logo" />
-        <div class="brand-text">
-          <strong>Hiltop Primary School</strong>
-        </div>
-      </a>
-      <nav class="primary-nav">
-        <ul class="nav-list">
-          <li><a href="index.html">Home</a></li>
-          <li><a class="active" href="leadership.html">Leadership</a></li>
-        </ul>
-      </nav>
+  <nav class="navbar">
+    <div class="logo"><a href="index.html">Hiltop Primary School</a></div>
+    <div class="nav-links">
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="staff.html">Our Staff</a>
+      <a href="leadership.html">Leadership</a>
+      <a href="careers.html">Careers</a>
+      <a href="admissions.html">Admissions</a>
+      <a href="events.html">Events</a>
+      <a href="gallery.html">Gallery</a>
+      <a href="contact.html">Contact</a>
     </div>
-  </header>
+  </nav>
 
-  <main id="main" class="container">
-    <h1>Leadership Team</h1>
-    <p class="lead">People who guide Hiltop’s strategic vision and day-to-day leadership.</p>
+  <section class="hero">
+    <div class="hero-content">
+      <h1>Our Leadership Team</h1>
+      <p>Guiding Hiltop Primary School with vision, experience, and passion.</p>
+    </div>
+  </section>
 
-    <section id="leadershipGrid" class="grid grid-2">
-      <!-- Fallback content -->
-      <article class="card bio-card">
-        <img src="headteacher.jpg" alt="Mrs Jane Smith — Headteacher" />
-        <div>
-          <h3>Mrs Jane Smith</h3>
-          <p class="role">Headteacher</p>
-          <p>Mrs Smith has led Hiltop since 2014 and focuses on curriculum, staff development and community partnerships.</p>
-        </div>
-      </article>
-
-      <article class="card bio-card">
-        <img src="deputy.jpg" alt="Mr Tom Williams — Deputy Head" />
-        <div>
-          <h3>Mr Tom Williams</h3>
-          <p class="role">Deputy Head</p>
-          <p>Mr Williams oversees teaching and learning, and leads professional development across the school.</p>
-        </div>
-      </article>
-    </section>
-  </main>
-
-  <footer class="site-footer">
-    <div class="container footer-inner">
-      <div class="footer-col"><strong>Hiltop Primary School</strong></div>
-      <div class="footer-col">
-        <h4>Contact</h4>
-        <a href="mailto:info@hiltop.school">info@hiltop.school</a>
+  <section>
+    <h2 class="section-title">Meet Our Leaders</h2>
+    <div class="grid grid-3">
+      <div class="card">
+        <img src="principal.jpg" alt="Principal">
+        <h3>Dr. Elizabeth Moore</h3>
+        <p>Principal</p>
+      </div>
+      <div class="card">
+        <img src="viceprincipal.jpg" alt="Vice Principal">
+        <h3>Mr. Daniel Carter</h3>
+        <p>Vice Principal</p>
+      </div>
+      <div class="card">
+        <img src="admin.jpg" alt="Admin Officer">
+        <h3>Mrs. Fiona Clark</h3>
+        <p>Administrative Officer</p>
       </div>
     </div>
-    <div class="site-copy"><small>© <span id="currentYear4"></span> Hiltop Primary School</small></div>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 Hiltop Primary School | <a href="contact.html">Contact Us</a></p>
+    <p>
+      <a href="#">Facebook</a> |
+      <a href="#">Twitter</a> |
+      <a href="#">Instagram</a>
+    </p>
   </footer>
 
-  <script src="scripts.js" defer></script>
+  <script src="scripts.js"></script>
 </body>
 </html>
-
