--- a/gallery.html
+++ b/gallery.html
@@ -1,56 +1,55 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Gallery — Hiltop Primary School</title>
-  <meta name="description" content="Photo gallery from Hiltop Primary School events and classroom life." />
-  <link rel="stylesheet" href="styles.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Gallery - Hiltop Primary School</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <a class="skip-link" href="#main">Skip to main content</a>
-
-  <header class="site-header">
-    <div class="container header-inner">
-      <a class="brand" href="index.html"><img src="logo.svg" alt="" class="logo" /><div class="brand-text"><strong>Hiltop Primary</strong></div></a>
-      <nav class="primary-nav"><ul class="nav-list"><li><a href="index.html">Home</a></li><li><a class="active" href="gallery.html">Gallery</a></li></ul></nav>
+  <nav class="navbar">
+    <div class="logo"><a href="index.html">Hiltop Primary School</a></div>
+    <div class="nav-links">
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="staff.html">Our Staff</a>
+      <a href="leadership.html">Leadership</a>
+      <a href="careers.html">Careers</a>
+      <a href="admissions.html">Admissions</a>
+      <a href="events.html">Events</a>
+      <a href="gallery.html">Gallery</a>
+      <a href="contact.html">Contact</a>
     </div>
-  </header>
+  </nav>
 
-  <main id="main" class="container">
-    <h1>Gallery</h1>
-    <p class="lead">A selection of moments from across the school year.</p>
+  <section class="hero">
+    <div class="hero-content">
+      <h1>Photo Gallery</h1>
+      <p>Explore moments from classrooms, events, and school life.</p>
+    </div>
+  </section>
 
-    <section id="galleryGrid" class="masonry">
-      <!-- Fallback images -->
-      <figure class="card">
-        <img src="gallery-1.jpg" alt="Children painting in class">
-        <figcaption>Art day — Reception class</figcaption>
-      </figure>
-      <figure class="card">
-        <img src="gallery-2.jpg" alt="Sports day races">
-        <figcaption>Sports Day — running races</figcaption>
-      </figure>
-      <figure class="card">
-        <img src="gallery-3.jpg" alt="School trip to the museum">
-        <figcaption>Year 3 Trip — local museum</figcaption>
-      </figure>
-    </section>
-  </main>
+  <section>
+    <h2 class="section-title">Our School in Pictures</h2>
+    <div class="grid grid-3">
+      <div class="card"><img src="gallery1.jpg" alt="Classroom Activity"></div>
+      <div class="card"><img src="gallery2.jpg" alt="Sports Day"></div>
+      <div class="card"><img src="gallery3.jpg" alt="Art Exhibition"></div>
+      <div class="card"><img src="gallery4.jpg" alt="Science Lab"></div>
+      <div class="card"><img src="gallery5.jpg" alt="Music Performance"></div>
+      <div class="card"><img src="gallery6.jpg" alt="School Assembly"></div>
+    </div>
+  </section>
 
-  <!-- Lightbox -->
-  <div id="lightbox" class="lightbox" aria-hidden="true" role="dialog" aria-label="Image preview">
-    <button class="lightbox-close" aria-label="Close">&times;</button>
-    <img id="lightboxImg" src="" alt="" />
-    <p id="lightboxCaption"></p>
-  </div>
-
-  <footer class="site-footer">
-    <div class="container footer-inner"><div class="footer-col"><strong>Hiltop Primary</strong></div><div class="footer-col"><a href="contact.html">Contact</a></div></div>
-    <div class="site-copy"><small>© <span id="currentYear8"></span> Hiltop Primary School</small></div>
+  <footer>
+    <p>&copy; 2025 Hiltop Primary School | <a href="contact.html">Contact Us</a></p>
+    <p>
+      <a href="#">Facebook</a> |
+      <a href="#">Twitter</a> |
+      <a href="#">Instagram</a>
+    </p>
   </footer>
 
-  <script src="scripts.js" defer></script>
+  <script src="scripts.js"></script>
 </body>
 </html>
-
