--- a/contact.html
+++ b/contact.html
@@ -1,56 +1,72 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Contact — Hiltop Primary School</title>
-  <meta name="description" content="Contact Hiltop Primary School: office hours, phone, email and a contact form." />
-  <link rel="stylesheet" href="styles.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact - Hiltop Primary School</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <a class="skip-link" href="#main">Skip to main content</a>
-
-  <header class="site-header">
-    <div class="container header-inner">
-      <a class="brand" href="index.html"><img src="logo.svg" alt="" class="logo" /><div class="brand-text"><strong>Hiltop Primary</strong></div></a>
-      <nav class="primary-nav"><ul class="nav-list"><li><a href="index.html">Home</a></li><li><a class="active" href="contact.html">Contact</a></li></ul></nav>
+  <nav class="navbar">
+    <div class="logo"><a href="index.html">Hiltop Primary School</a></div>
+    <div class="nav-links">
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="staff.html">Our Staff</a>
+      <a href="leadership.html">Leadership</a>
+      <a href="careers.html">Careers</a>
+      <a href="admissions.html">Admissions</a>
+      <a href="events.html">Events</a>
+      <a href="gallery.html">Gallery</a>
+      <a href="contact.html">Contact</a>
     </div>
-  </header>
+  </nav>
 
-  <main id="main" class="container">
-    <h1>Contact us</h1>
-    <p class="lead">We welcome calls and emails from parents and the community. Use the form or the contact details below.</p>
+  <section class="hero">
+    <div class="hero-content">
+      <h1>Contact Us</h1>
+      <p>We’re here to answer your questions and guide you through admissions or events.</p>
+    </div>
+  </section>
 
-    <section class="grid grid-2">
-      <form id="contactForm" class="card form" action="#" novalidate>
-        <label>Full name<input name="name" type="text" required></label>
-        <label>Email address<input name="email" type="email" required></label>
-        <label>Phone (optional)<input name="phone" type="tel"></label>
-        <label>Message<textarea name="message" rows="6" required></textarea></label>
-        <div class="form-actions">
-          <button class="btn btn-primary" type="submit">Send message</button>
-          <button class="btn btn-ghost" type="reset">Reset</button>
-        </div>
-        <div id="contactResult" class="hidden"></div>
-      </form>
+  <section>
+    <h2 class="section-title">Get In Touch</h2>
+    <div class="grid" style="gap:2rem; max-width:600px; margin:0 auto;">
+      <div class="card">
+        <h3>Address</h3>
+        <p>123 Hiltop Road, Cityville, Country</p>
+      </div>
+      <div class="card">
+        <h3>Email</h3>
+        <p>info@hiltopprimary.edu</p>
+      </div>
+      <div class="card">
+        <h3>Phone</h3>
+        <p>+1 (555) 123-4567</p>
+      </div>
+    </div>
+  </section>
 
-      <aside class="card contact-info">
-        <h2>School Office</h2>
-        <p>Hiltop Primary School<br />12 Hillcrest Road<br />Townsville, HT1 2AB</p>
-        <p><strong>Tel:</strong> <a href="tel:+441234567890">01234 567 890</a></p>
-        <p><strong>Email:</strong> <a href="mailto:info@hiltop.school">info@hiltop.school</a></p>
-        <h3>Office hours</h3>
-        <p>Mon—Fri: 08:30 — 16:00</p>
-      </aside>
-    </section>
-  </main>
+  <section>
+    <h2 class="section-title">Contact Form</h2>
+    <form class="grid" style="gap:1rem; max-width:600px; margin:0 auto;">
+      <input type="text" placeholder="Your Name" required>
+      <input type="email" placeholder="Email Address" required>
+      <input type="tel" placeholder="Phone Number">
+      <textarea placeholder="Your Message" required></textarea>
+      <button type="submit" class="btn">Send Message</button>
+    </form>
+  </section>
 
-  <footer class="site-footer">
-    <div class="container footer-inner"><div class="footer-col"><strong>Hiltop Primary</strong></div><div class="footer-col"><a href="policies.html">Policies</a></div></div>
-    <div class="site-copy"><small>© <span id="currentYear10"></span> Hiltop Primary School</small></div>
+  <footer>
+    <p>&copy; 2025 Hiltop Primary School | <a href="contact.html">Contact Us</a></p>
+    <p>
+      <a href="#">Facebook</a> |
+      <a href="#">Twitter</a> |
+      <a href="#">Instagram</a>
+    </p>
   </footer>
 
-  <script src="scripts.js" defer></script>
+  <script src="scripts.js"></script>
 </body>
 </html>
-
