--- a/staff.html
+++ b/staff.html
@@ -1,86 +1,82 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Our Staff — Hiltop Primary School</title>
-  <meta name="description" content="Meet the teachers and support staff at Hiltop Primary School." />
-  <link rel="stylesheet" href="styles.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Our Staff - Hiltop Primary School</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <a class="skip-link" href="#main">Skip to main content</a>
-
-  <header class="site-header">
-    <div class="container header-inner">
-      <a class="brand" href="index.html">
-        <img src="logo.svg" alt="Hiltop logo" class="logo" />
-        <div class="brand-text">
-          <strong>Hiltop Primary School</strong>
-          <span class="tagline">Learning • Kindness • Growth</span>
-        </div>
-      </a>
-      <nav class="primary-nav">
-        <ul class="nav-list">
-          <li><a href="index.html">Home</a></li>
-          <li><a class="active" href="staff.html">Our Staff</a></li>
-        </ul>
-      </nav>
+  <nav class="navbar">
+    <div class="logo"><a href="index.html">Hiltop Primary School</a></div>
+    <div class="nav-links">
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="staff.html">Our Staff</a>
+      <a href="leadership.html">Leadership</a>
+      <a href="careers.html">Careers</a>
+      <a href="admissions.html">Admissions</a>
+      <a href="events.html">Events</a>
+      <a href="gallery.html">Gallery</a>
+      <a href="contact.html">Contact</a>
     </div>
-  </header>
+  </nav>
 
-  <main id="main" class="container">
-    <h1>Our Staff</h1>
-    <p class="lead">Our staff are committed to excellent teaching and the wellbeing of every child.</p>
-
-    <section class="controls">
-      <input id="staffFilter" type="search" placeholder="Search staff by name or role" aria-label="Search staff" />
-    </section>
-
-    <section id="staffGrid" class="grid grid-3 staff-grid">
-      <!-- Fallback staff cards (for no-JS) -->
-      <article class="card staff-card">
-        <img src="headteacher.jpg" alt="Mrs Jane Smith — Headteacher" />
-        <h3>Mrs Jane Smith</h3>
-        <p class="role">Headteacher</p>
-        <p class="bio small">Headteacher since 2014. Passionate about curriculum development and inclusive education.</p>
-      </article>
-
-      <article class="card staff-card">
-        <img src="staff-1.jpg" alt="Mr Tom Harris — Year 4 teacher" />
-        <h3>Mr Tom Harris</h3>
-        <p class="role">Year 4 Teacher</p>
-        <p class="bio small">Leads maths across KS2 and runs the chess club.</p>
-      </article>
-
-      <article class="card staff-card">
-        <img src="staff-2.jpg" alt="Ms Rachel Green — SENDCo" />
-        <h3>Ms Rachel Green</h3>
-        <p class="role">SENCo</p>
-        <p class="bio small">Specialist in supporting children with additional needs.</p>
-      </article>
-    </section>
-
-    <div class="actions">
-      <a class="btn btn-ghost" href="careers.html">Work with us</a>
+  <section class="hero">
+    <div class="hero-content">
+      <h1>Meet Our Dedicated Staff</h1>
+      <p>Teachers and staff who inspire, educate, and guide every student.</p>
     </div>
-  </main>
+  </section>
 
-  <footer class="site-footer">
-    <div class="container footer-inner">
-      <div class="footer-col">
-        <strong>Hiltop Primary School</strong>
+  <section>
+    <h2 class="section-title">Teaching Staff</h2>
+    <div class="grid grid-3">
+      <div class="card">
+        <img src="teacher1.jpg" alt="Teacher 1">
+        <h3>Jane Smith</h3>
+        <p>Math Teacher & STEM Coordinator</p>
       </div>
-      <div class="footer-col">
-        <h4>Helpful links</h4>
-        <ul class="footer-links">
-          <li><a href="policies.html">Policies</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
+      <div class="card">
+        <img src="teacher2.jpg" alt="Teacher 2">
+        <h3>Mark Johnson</h3>
+        <p>English & Literature Specialist</p>
+      </div>
+      <div class="card">
+        <img src="teacher3.jpg" alt="Teacher 3">
+        <h3>Sarah Williams</h3>
+        <p>Science Teacher & Lab Supervisor</p>
       </div>
     </div>
-    <div class="site-copy"><small>© <span id="currentYear3"></span> Hiltop Primary School</small></div>
+  </section>
+
+  <section>
+    <h2 class="section-title">Support Staff</h2>
+    <div class="grid grid-3">
+      <div class="card">
+        <h3>Emily Brown</h3>
+        <p>School Counselor</p>
+      </div>
+      <div class="card">
+        <h3>James Lee</h3>
+        <p>IT & Computer Lab Manager</p>
+      </div>
+      <div class="card">
+        <h3>Linda Green</h3>
+        <p>Librarian</p>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 Hiltop Primary School | <a href="contact.html">Contact Us</a></p>
+    <p>
+      <a href="#">Facebook</a> |
+      <a href="#">Twitter</a> |
+      <a href="#">Instagram</a>
+    </p>
   </footer>
 
-  <script src="scripts.js" defer></script>
+  <script src="scripts.js"></script>
 </body>
 </html>
