--- a/leadership.html
+++ b/leadership.html
@@ -33,19 +33,46 @@
     <h2 class="section-title">Meet Our Leaders</h2>
     <div class="grid grid-3">
       <div class="card">
-        <img src="principal.jpg" alt="Principal">
-        <h3>Dr. Elizabeth Moore</h3>
-        <p>Principal</p>
+        <img src="bennydog.png" alt="Headteacher">
+        <h3>Mr. Benjamin Day</h3>
+        <p>Headteacher</p>
+        <p>Whole School Oversight</p>
       </div>
       <div class="card">
-        <img src="viceprincipal.jpg" alt="Vice Principal">
-        <h3>Mr. Daniel Carter</h3>
-        <p>Vice Principal</p>
+        <img src="bennydog.png" alt="Senior DHT">
+        <h3>VACANT</h3>
+        <p>Senior Deputy Headteacher</p>
+        <p>Whole School Management</p>
       </div>
       <div class="card">
-        <img src="admin.jpg" alt="Admin Officer">
-        <h3>Mrs. Fiona Clark</h3>
-        <p>Administrative Officer</p>
+        <img src="bennydog.png" alt="DHT">
+        <h3>VACANT</h3>
+        <p>Deputy Headteacher</p>
+        <p>Behaviour & Discipline Lead</p>
+      </div>
+      <div class="card">
+        <img src="bennydog.png" alt="DHT">
+        <h3>VACANT</h3>
+        <p>Deputy Headteacher</p>
+        <p>Pastoral & Safeguarding Lead</p>
+      </div>
+      <div class="card">
+        <img src="bennydog.png" alt="Senior AHT">
+        <h3>VACANT</h3>
+        <p>Assistant Headteacher</p>
+        <p>Teaching & Learning Lead</p>
+      </div>
+      <div class="card">
+        <img src="bennydog.png" alt="AHT">
+        <h3>VACANT</h3>
+        <p>Assistant Headteacher</p>
+        <p>Staffing & HR Lead</p>
+      </div>
+      <div class="card">
+        <img src="bennydog.png" alt="ASL">
+        <h3>VACANT</h3>
+        <p>Associate Senior Leader</p>
+        <p>Finance/Business Manager</p>
       </div>
     </div>
   </section>
@@ -62,3 +89,4 @@
   <script src="scripts.js"></script>
 </body>
 </html>
+
