--- a/careers.html
+++ b/careers.html
@@ -33,19 +33,24 @@
     <h2 class="section-title">Current Openings</h2>
     <div class="grid grid-3">
       <div class="card">
-        <h3>Primary School Teacher</h3>
-        <p>Full-time, Mathematics and Science</p>
+        <h3>Teaching Assistant</h3>
+        <p>Full-time, All Years</p>
         <a href="contact.html" class="btn">Apply Now</a>
       </div>
       <div class="card">
-        <h3>Art & Music Teacher</h3>
-        <p>Part-time, Creative Arts Department</p>
+        <h3>Subject Class Teacher</h3>
+        <p>Full-Time, All Years, Any Subject</p>
         <a href="contact.html" class="btn">Apply Now</a>
       </div>
       <div class="card">
-        <h3>IT Coordinator</h3>
-        <p>Full-time, Manage school IT infrastructure and labs</p>
+        <h3>SEN Class Teacher</h3>
+        <p>Full-time, SEN Classes Only</p>
         <a href="contact.html" class="btn">Apply Now</a>
+      </div>
+      <div class="card">
+        <h3>Senior Leadership Team</h3>
+        <p>Full-time</p>
+        <a href="https://discord.gg/2qNzcqJ4W5" class="btn">Apply Now</a>
       </div>
     </div>
   </section>
@@ -62,3 +67,4 @@
   <script src="scripts.js"></script>
 </body>
 </html>
+
