--- a/events.html
+++ b/events.html
@@ -33,19 +33,19 @@
     <h2 class="section-title">Upcoming Events</h2>
     <div class="grid grid-3">
       <div class="card">
-        <h3>Science Fair 2025</h3>
-        <p>Date: June 15, 2025</p>
-        <p>Explore student experiments, projects, and presentations.</p>
+        <h3>School's Open Evening</h3>
+        <p>Date: September 28, 2025</p>
+        <p>Come joins us as we open the doors to familys thinking about sending their student to our school. We will have bevareges, snacks and lots to learn!</p>
       </div>
       <div class="card">
-        <h3>Annual Sports Day</h3>
-        <p>Date: September 10, 2025</p>
-        <p>Fun competitions promoting teamwork, fitness, and school spirit.</p>
+        <h3>First day of term</h3>
+        <p>Date: October 2, 2025</p>
+        <p>First day back to school for all years!</p>
       </div>
       <div class="card">
-        <h3>Art Exhibition</h3>
+        <h3>Parents Evening</h3>
         <p>Date: November 5, 2025</p>
-        <p>Celebrate creativity with student artwork displays and workshops.</p>
+        <p>Meet with your child's teacher to see how they are getting on this year so far!</p>
       </div>
     </div>
   </section>
@@ -62,3 +62,4 @@
   <script src="scripts.js"></script>
 </body>
 </html>
+
