--- a/index.html
+++ b/index.html
@@ -51,19 +51,19 @@
     <h2 class="section-title">Upcoming Events</h2>
     <div class="grid grid-3">
       <div class="card">
-        <h3>Science Fair 2025</h3>
-        <p>Students showcase innovative projects and experiments.</p>
-        <a href="events.html" class="btn">Learn More</a>
+        <h3>School's Open Evening</h3>
+        <p>Date: September 28, 2025</p>
+        <p>Come joins us as we open the doors to familys thinking about sending their student to our school. We will have bevareges, snacks and lots to learn!</p>
       </div>
       <div class="card">
-        <h3>Annual Sports Day</h3>
-        <p>Fun-filled activities to encourage teamwork and fitness.</p>
-        <a href="events.html" class="btn">Learn More</a>
+        <h3>First day of term</h3>
+        <p>Date: October 2, 2025</p>
+        <p>First day back to school for all years!</p>
       </div>
       <div class="card">
-        <h3>Art Exhibition</h3>
-        <p>Celebrating creativity with student art displays and workshops.</p>
-        <a href="events.html" class="btn">Learn More</a>
+        <h3>Parents Evening</h3>
+        <p>Date: November 5, 2025</p>
+        <p>Meet with your child's teacher to see how they are getting on this year so far!</p>
       </div>
     </div>
   </section>
@@ -80,3 +80,4 @@
   <script src="scripts.js"></script>
 </body>
 </html>
+
