--- a/staff.html
+++ b/staff.html
@@ -71,12 +71,12 @@
   <footer>
     <p>&copy; 2025 Hiltop Primary School | <a href="contact.html">Contact Us</a></p>
     <p>
-      <a href="#">Facebook</a> |
-      <a href="#">Twitter</a> |
-      <a href="#">Instagram</a>
+      <a href="https://discord.gg/2qNzcqJ4W5">Discord</a> |
+      <a href="https://www.roblox.com/communities/381133508/Greggs-RLBX#!/about">ROBLOX Group</a> |
     </p>
   </footer>
 
   <script src="scripts.js"></script>
 </body>
 </html>
+
