--- a/index.html
+++ b/index.html
@@ -21,6 +21,21 @@
     </div>
   </nav>
 
+<!-- Open Graph / Facebook -->
+<meta property="og:title" content="Hiltop Primary School">
+<meta property="og:description" content="Welcome to Hiltop Primary School – Be kind, Work Hard">
+<meta property="og:image" content="logo.png">
+<meta property="og:url" content="https://bennydog138.github.io/hiltop.primary.school">
+<meta property="og:type" content="website">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="logo.png">
+<meta name="twitter:title" content="Hiltop Primary School">
+<meta name="twitter:description" content="Welcome to Hiltop Primary School – Be Kind, Work Hard">
+<meta name="twitter:image" content="logo.png">
+<meta name="twitter:site" content="@HiltopSchool">
+
+  
   <section class="hero">
     <div class="hero-content">
       <h1>Welcome to Hiltop Primary School</h1>
@@ -79,5 +94,6 @@
   <script src="scripts.js"></script>
 </body>
 </html>
+
 
 
