--- a/leadership.html
+++ b/leadership.html
@@ -39,8 +39,8 @@
         <p>Whole School Oversight</p>
       </div>
       <div class="card">
-        <img src="bennydog.png" alt="Senior DHT">
-        <h3>VACANT</h3>
+        <img src="barni.png" alt="Senior DHT">
+        <h3>Mr. Barni Coombes</h3>
         <p>Senior Deputy Headteacher</p>
         <p>Whole School Management</p>
       </div>
@@ -88,5 +88,6 @@
   <script src="scripts.js"></script>
 </body>
 </html>
+
 
 
