--- a/leadership.html
+++ b/leadership.html
@@ -45,14 +45,14 @@
         <p>Whole School Management</p>
       </div>
       <div class="card">
-        <img src="bennydog.png" alt="DHT">
-        <h3>VACANT</h3>
+        <img src="chiane.png" alt="DHT">
+        <h3>Miss Chiane Louise-Rose</h3>
         <p>Deputy Headteacher</p>
         <p>Behaviour & Discipline Lead</p>
       </div>
       <div class="card">
-        <img src="bennydog.png" alt="DHT">
-        <h3>VACANT</h3>
+        <img src="jake.png" alt="DHT">
+        <h3>Mr Jake Andrews</h3>
         <p>Deputy Headteacher</p>
         <p>Pastoral & Safeguarding Lead</p>
       </div>
@@ -88,6 +88,7 @@
   <script src="scripts.js"></script>
 </body>
 </html>
+
 
 
 
