--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@
                 {username: 'victoria.meepstead@hiltopprimary.com', password: 'BillyBobJohn!', name: 'Victoria Meepstead', role: 'Headteacher'},
                 {username: 'jake.adnsrews@hiltopprimary.com', password: 'Andrews_Of_The_Jake', name: 'Jake Andrews', role: 'Deputy Headteacher'},
                 {username: 'julian.karel@hiltopprimary.com', password: 'GraysAnatomyMyself25', name: 'Julian Karel', role: 'Assistant Headteacher'},
-                {username: 'wilson.dylan@hiltopprimary.com', password: 'MrWilsanDylan_Me!', name: 'Wilson Dylan', role: 'Assistant Headteacher'},
+                {username: 'wilson.dylan@hiltopprimary.com', password: 'MrWilsonDylan_Me!', name: 'Wilson Dylan', role: 'Assistant Headteacher'},
                 {username: 'owen.martinez@hiltopprimary.com', password: 'OwenMartinez@hiltopprimary.com', name: 'Owen Martinez', role: 'Associate Senior Leader'},
                 {username: 'hybridz.dynamics@hiltopprimary.com', password: 'HybridsCommunityDynamics', name: 'Hybridz Dynamics', role: 'Head of Department'},
                 {username: 'vacant@hiltopprimary.com', password: 'WilliamIsCool', name: 'Vacant', role: 'Teacher'},
